<resources>
    <string name="app_name">CoffeeLab</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Textview -->
    <string name="tv_coffee">Coffee</string>
    <string name="tv_welcome">Hoş Geldiniz</string>
    <string name="tv_login">Giriş Yap</string>
    <string name="tv_signup">Üye Ol</string>
    <string name="tv_signup_continue">Üye Olmadan Devam Et</string>
    <string name="tv_forgot_password">Şifreni mi unuttun?</string>
    <string name="tv_account_login">Henüz bir hesabın yok mu?</string>
    <string name="tv_kvkk">KVKK metnini okudum,onaylıyorum.</string>
    <string name="tv_explanation">E-ticaret sitemize giriş yaparken oluşturduğunuz şifreyi kullanabilirsiniz.</string>
    <string name="tv_membership_agreement">Üyelik ve Kullanıcı Sözleşmesini okudum, onaylıyorum.</string>
    <string name="tv_password_condition">Şifreniz en az 1 sayı, 1 küçük harf ve 1 büyük harf içermeli ve 8–25 karakter arasında olmalı.</string>
    <string name="tv_hello_name">Merhaba,Filiz</string>
    <string name="tv_home_page">Anasayfa</string>
    <string name="tv_upload_TL">TL Yükle</string>
    <string name="tv_coupons">Kuponlarım</string>
    <string name="tv_giftcards">GiftCards</string>
    <string name="tv_campaigns">Kampanyalar</string>
    <string name="tv_announcements">Duyurular</string>
    <string name="tv_featured_product_name">Product Name</string>
    <string name="tv_see_all">Tümünü Gör(%d)</string>
    <string name="tv_back">Geri</string>
    <string name="tv_products">Ürünler</string>
    <string name="tv_search_hint">Arama</string>
    <string name="tv_category_hot_drinks">Sıcak İçecekler</string>
    <string name="tv_category_cold_drinks">Soğuk İçecekler</string>
    <string name="tv_category_coffee_varieties">Kahve Çeşitleri</string>
    <string name="tv_category_desserts">Tatlılar</string>
    <string name="tv_category_diet_foods">Diyetlik Yemekler</string>
    <string name="tv_closed">Kapalı</string>
    <string name="tv_open">Açık</string>
    <string name="tv_favorite">Favori</string>
    <string name="tv_not_favorite">Favori ürününüz bulunmamaktadır.</string>
    <string name="tv_store_name">Ankara Kızılay</string>
    <string name="tv_store_address">Mesrutiyet Mah. Kizilay Karanfil Sokak No:42A Çankaya/Ankara</string>
    <string name="tv_directions">Yol Tarifi</string>
    <string name="tv_working_hours">Çalışma Saatleri</string>
    <string name="tv_mid_week">Hafta İçi</string>
    <string name="tv_weekend">Hafta Sonu</string>
    <string name="tv_mid_week_hours">"07:00 – 02:00"</string>
    <string name="tv_weekend_hours">"10:00 – 00:00"</string>
    <string name="tv_features">Özellikler</string>

    <!-- Edittext -->
    <string name="et_name">Ad</string>
    <string name="et_surname">Soyad</string>
    <string name="et_email">Email</string>
    <string name="et_birth">Doğum Tarihi</string>
    <string name="et_password">Parola</string>
    <string name="et_again_password">Parola Yeniden</string>

    <!-- Button -->
    <string name="btn_log_in">Giriş</string>
    <string name="btn_update">Güncelle</string>
    <string name="btn_signup">Üye ol</string>
    <string name="btn_add_to_cart">Sepete ekle</string>
    <string name="btn_search">Ara</string>

    <!-- Toast Message -->
    <string name="toast_message_verification">Email doğrulaması gerekli.</string>
    <string name="toast_message_email">Lütfen geçerli bir email adresi girin.</string>
    <string name="toast_message_sent">Şifre sıfırlama e-postası gönderildi</string>

    <!-- Bottom View Name-->
    <string name="tab_dashboard">Anasayfa</string>
    <string name="tab_favorites">Favoriler</string>
    <string name="tab_stores">Mağazalar</string>
    <string name="tab_selling">Sipariş Ver</string>
    <string name="tab_more">Diğer</string>

</resources>