<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuDashboard"
        android:icon="@drawable/ic_home"
        android:title="@string/tab_dashboard" />

    <item
        android:id="@+id/menuProduct"
        android:icon="@drawable/ic_coffee"
        android:title="@string/tab_products" />

    <item
        android:id="@+id/menuSelling"
        android:icon="@drawable/ic_shopping"
        android:title="@string/tab_selling" />

    <item
        android:id="@+id/menuStore"
        android:icon="@drawable/ic_stores_location"
        android:title="@string/tab_stores" />

    <item
        android:id="@+id/menuMore"
        android:icon="@drawable/ic_more"
        android:title="@string/tab_more" />

</menu>