<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        android:paddingVertical="@dimen/padding_16dp">

        <LinearLayout
            android:id="@+id/layoutProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_10dp"
            android:background="@drawable/bg_linear_layout"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/padding_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/bg_circle_image"
                android:clipToOutline="true"
                android:scaleType="centerCrop"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_12dp"
                android:text="@string/tv_hello_name"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/text_size_16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/imgSettings"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_settings"
                app:tint="@color/dark_gray" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFeaturedProducts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutProfile" />

        <LinearLayout
            android:id="@+id/layoutContentWhite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:background="@drawable/bg_linear_layout"
            android:orientation="vertical"
            android:padding="@dimen/padding_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvFeaturedProducts">

            <LinearLayout
                android:id="@+id/layoutActions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/Custom_Layout_Actions_Button"
                    android:text="@string/tv_upload_TL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/Custom_Layout_Actions_Button"
                    android:layout_marginStart="@dimen/margin_8dp"
                    android:text="@string/tv_coupons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/Custom_Layout_Actions_Button"
                    android:layout_marginStart="@dimen/margin_8dp"
                    android:text="@string/tv_giftcards"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <!-- KAMPANYALAR -->
            <TextView
                android:id="@+id/tvCampaigns"
                style="@style/Custom_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20dp"
                android:text="@string/tv_campaigns" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCampaigns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp" />

            <!-- DUYURULAR -->
            <TextView
                android:id="@+id/tvAnnouncements"
                style="@style/Custom_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20dp"
                android:text="@string/tv_announcements" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAnnouncements"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>