<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/app_bg_color"
    tools:context=".ui.authentication.login.LoginFragment">

    <ImageView
        android:id="@+id/imgAppName"
        android:layout_width="292dp"
        android:layout_height="41dp"
        android:layout_marginTop="@dimen/margin_64dp"
        android:src="@drawable/img_app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_64dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/radius_16dp"
        app:cardElevation="@dimen/elevation_6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAppName">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/margin_6dp"
            android:orientation="vertical"
            android:padding="@dimen/padding_16dp">

            <ImageView
                android:id="@+id/imgIcon"
                android:layout_width="match_parent"
                android:layout_height="@dimen/icon_size_xxlarge_128dp"
                android:src="@drawable/img_coffee_cup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_view_height"
                android:layout_marginTop="@dimen/margin_16dp"
                android:autofillHints="name"
                android:background="@drawable/bg_edittext_frame"
                android:drawableStart="@drawable/ic_email"
                android:drawableTint="@color/app_main_color"
                android:drawablePadding="@dimen/padding_8dp"
                android:hint="@string/et_email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/padding_8dp"
                android:textColorHint="@color/light_gray" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_view_height"
                android:layout_marginTop="@dimen/margin_32dp"
                android:autofillHints="password"
                android:background="@drawable/bg_edittext_frame"
                android:drawableStart="@drawable/ic_lock"
                android:drawableTint="@color/app_main_color"
                android:drawablePadding="@dimen/padding_8dp"
                android:hint="@string/et_password"
                android:inputType="textPassword"
                android:padding="@dimen/padding_8dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/gray"
                app:expandedHintEnabled="false"
                app:hintAnimationEnabled="false"
                app:hintEnabled="true"
                android:textColorHint="@color/light_gray" />

            <TextView
                android:id="@+id/tvForgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="@dimen/margin_6dp"
                android:text="@string/tv_forgot_password"
                android:textColor="@color/app_main_light_color"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogIn"
                style="@style/Custom_Button"
                android:layout_marginTop="@dimen/margin_20dp"
                android:text="@string/btn_log_in" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_account_login"
        android:textAllCaps="false"
        android:textColor="@color/app_main_light_color"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_20dp"
        android:text="@string/tv_signup"
        android:textColor="@color/app_main_light_color"
        android:textSize="@dimen/text_size_16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="@dimen/elevation_8dp"
        android:indeterminateTint="@color/app_main_color"
        android:layout_marginHorizontal="@dimen/margin_20dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>